[gd_scene load_steps=6 format=3 uid="uid://o3ft7de25rtd"]

[ext_resource type="Script" uid="uid://bdu6ome3nogst" path="res://Scripts/LevelScripts/multi_station.gd" id="1_uf7g0"]
[ext_resource type="Texture2D" uid="uid://oaujf1ock2wk" path="res://Assets/Rescue Station/multi_plot.png" id="2_2txpw"]
[ext_resource type="Shader" uid="uid://dksxj0hluoa8f" path="res://Shaders/build_station.gdshader" id="3_bm8jn"]
[ext_resource type="Texture2D" uid="uid://coxtvxa3gff2q" path="res://Assets/Rescue Station/Template_station.png" id="4_2txpw"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_qdy2x"]
shader = ExtResource("3_bm8jn")
shader_parameter/wiggle_speed = 2.0
shader_parameter/wiggle_offset = 0.0

[node name="MS" type="Node2D"]
script = ExtResource("1_uf7g0")

[node name="TextureButton" type="TextureButton" parent="."]
self_modulate = Color(0.427451, 0.592157, 0.819608, 1)
offset_left = -31.0
offset_top = -1.0
offset_right = 64.0
offset_bottom = 53.0
texture_normal = ExtResource("2_2txpw")

[node name="Label" type="Label" parent="TextureButton"]
layout_mode = 0
offset_right = 95.0
offset_bottom = 54.0
text = "--------------
 xx : xM â‚¬"
horizontal_alignment = 1

[node name="Template" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_qdy2x")
instance_shader_parameters/progress = 0.0
instance_shader_parameters/wiggle_strength = 0.0
position = Vector2(16, -16)
texture = ExtResource("4_2txpw")

[connection signal="button_up" from="TextureButton" to="." method="_on_texture_button_button_up"]
[connection signal="mouse_entered" from="TextureButton" to="." method="_on_texture_button_mouse_entered"]
[connection signal="mouse_exited" from="TextureButton" to="." method="_on_texture_button_mouse_exited"]
